--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "bootstrap": "^4.3.1",
     "gsap": "^3.12.2",
     "imagesloaded": "^5.0.0",
+    "img-comparison-slider": "^8.0.6",
     "jquery": "^3.4.1",
     "lity-v2": "^2.3.2",
     "matchheight": "^0.1.2",
